--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                   curso CursoemVideo.
                 </p>
                   <ul class="empresa-habilidades">
-                    <li><a href="https://rodrigorwl.github.io/projeto-cordel/" target="_blank">Projeto Cordel</a></li>
-                    <li><a href="https://rodrigorwl.github.io/projeto-android/" target="_blank">Projeto Android</a></li>
-                    <li><a href="https://rodrigorwl.github.io/projeto-redes/" target="_blank">Projeto Redes Sociais</a></li>
+                    <li><a href="https://rodrigorwl.github.io/projeto-cordel/" target="_blank">Projeto Cordel &#x1f517;</a></li>
+                    <li><a href="https://rodrigorwl.github.io/projeto-android/" target="_blank">Projeto Android &#x1f517;</a></li>
+                    <li><a href="https://rodrigorwl.github.io/projeto-redes/" target="_blank">Projeto Redes Sociais &#x1f517;</a></li>
                   </ul>
                 </div>
               
