--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                  
                  <ul class="faculdade-lista">
                   <li class="faculdade">
-                    <span class="faculdade-tipo">Graduação</span>
+                    <span class="faculdade-tipo">Graduando</span>
                     <h3 class="faculdade-curso">Análise Desenvolimento de Sistemas</h3>
                     <span class="faculdade-instituicao">Estácio</span>
                   </li>
