--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Desenvolvedor Front End Localizado em Florianópolis">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <link rel="shortcut icon" href="img/ico.ico" type="image/x-icon">
+  <title>Meu primeiro portifólio</title>
 </head>
 <body>
   <header class="header">
